Removed @Identfier annotation form camel-jms with-external test